messages/Enumerated: Fix Java9+ deprecation for new Integer.